--- a/js_day_9_trycatch.html
+++ b/js_day_9_trycatch.html
@@ -5,15 +5,13 @@
 </head>
 <body>
 <script type="text/javascript">
-try
-{
-alert('This is code inside the try clause');
-ablert('No Errors so catch code will not execute');
-}
-catch(exception)
-{
-alert("||The error is" + exception.message);
-}
+try{
+	alert('This is code inside the try clause');
+	ablert('No Errors so catch code will not execute');
+	}
+catch(exception){
+	alert("||The error is" + exception.message);
+	}
 </script>
 </body>
 </html>
