--- a/js_day-14_4.html
+++ b/js_day-14_4.html
@@ -7,6 +7,7 @@
 	<h1 id="level1"></h1>
 <script type="text/javascript">
 
+
 var months = new Array('January','February','March','April','May','June','July',
 'August', 'September', 'October', 'November', 'December');
 var dateNow = new Date();
@@ -35,6 +36,9 @@ var daySuffix;
 document.write('It is the ' + dayNow + daySuffix + ' day ');
 document.write('in the month of ' + monthNow);
 document.write(' in the year ' + yearNow);
+
+
+debugger;
 </script>
 </body>
 </html>
