--- a/js_day-14_1.html
+++ b/js_day-14_1.html
@@ -9,7 +9,7 @@
 	var myString = 'Hello World';
 		myString.charAt(3);
 
-	
+		console.log( myString.charAt(3) )
 
 
 	document.getElementById('fileName').innerHTML = myString.charAt(3).toUpperCase();
