--- a/js_day-15_1.html
+++ b/js_day-15_1.html
@@ -1,7 +1,20 @@
 <html>
 <body>
-
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script type='text/javascript'>
+
+
+axios.get("https://newsapi.org/v2/top-headlines?sources=cnbc&apiKey=2399229cf4fa4ba5910d85d25609615d").then( 
+	(data) => {
+		console.log(data);
+	} 
+	);
+
+// $.ajax({
+// 	url: 'https://newsapi.org/v2/top-headlines?sources=cnbc&apiKey=2399229cf4fa4ba5910d85d25609615d',
+// 	e
+// })
 
 
 
