--- a/js_day-15_3.html
+++ b/js_day-15_3.html
@@ -1,18 +1,23 @@
 <html>
 <body>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+<!-- <script src="https://unpkg.com/axios/dist/axios.min.js"></script> -->
 <script type='text/javascript'>
 	var obj = {a: 25, b: 50, c: 75};
 	var A = obj;
 	var B = obj;
 
-	A.a = 30;
-	B.a = 40;
+	/*A.a = 30;
+	B.a = 40;*/
 
-	alert(obj.a + " " + A.a + " " + B.a); // 40 40 40;
+	// console.log(obj.a + " " + A.a + " " + B.a); // 40 40 40;
 
 
+	console.log(obj);
+
+	var newObj = Object.assign({}, obj);
+	newObj.a = 30;
+	console.log(newObj.a)
 
 // console.log(articles);
 
