--- a/template_sunil/sass-testing/index.html
+++ b/template_sunil/sass-testing/index.html
@@ -3,15 +3,36 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link href="./css/style.css" type="text/css" rel="stylesheet">
+	<link href="./css/header.css" type="text/css" rel="stylesheet">
 </head>
 <!-- https://stackoverflow.com/questions/42518621/node-sass-is-not-recognized-by-command-line -->
 <!-- https://gist.github.com/AllThingsSmitty/3bcc79da563df756be46 -->
 <!-- node-sass --output-style -o ./css/ ./scss/style.scss --watch -->
+<!-- node-sass --output-style -o ./css/ ./scss/style --watch -->
+
+<!-- step for adding the node-sass -->
+<!-- node install -->
+<!-- https://nodejs.org/en/download/ -->
+<!-- cmd 
+	Step 1 ==> node -v
+	Step 2 ==> npm i node-sass -g
+	Step 3 ==>  node-sass --output-style -o ./css/ ./scss/style.scss --watch
+	
+ -->
 
 
 <body>
-	<h1>
+	<div class="box"></div>
+	<h1 class="header">
 		hhasdlkf fdsalkja fdsl	
 	</h1>
+	<p class="para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada tortor venenatis urna scelerisque, et tincidunt quam tempor. Duis pretium odio non turpis tempus, sit amet porta odio sagittis. Etiam gravida malesuada mauris, congue ultrices diam ullamcorper non. Donec id ante ut est fermentum placerat. Curabitur et ultricies nunc, sed sagittis neque. Praesent ornare fringilla est, faucibus molestie sem tincidunt id. Integer porta tincidunt elit id facilisis. Nullam pulvinar congue sapien ut rhoncus. Duis ultricies nibh quis sem vehicula, at porttitor dui imperdiet. Cras luctus, dui in volutpat ornare, urna odio rutrum neque, at pellentesque sapien ex nec elit. Ut maximus sodales eros id efficitur. Nunc pulvinar elit tortor, quis congue dui elementum nec. Suspendisse potenti. Cras eleifend feugiat augue eget gravida. Donec bibendum, ante non vehicula maximus, sapien risus laoreet nunc, a aliquet felis arcu eu ante. Phasellus molestie lectus in pharetra fermentum.</p>
+	<p class="para-1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada tortor venenatis urna scelerisque, et tincidunt quam tempor. Duis pretium odio non turpis tempus, sit amet porta odio sagittis. Etiam gravida malesuada mauris, congue ultrices diam ullamcorper non. Donec id ante ut est fermentum placerat. Curabitur et ultricies nunc, sed sagittis neque. Praesent ornare fringilla est, faucibus molestie sem tincidunt id. Integer porta tincidunt elit id facilisis. Nullam pulvinar congue sapien ut rhoncus. Duis ultricies nibh quis sem vehicula, at porttitor dui imperdiet. Cras luctus, dui in volutpat ornare, urna odio rutrum neque, at pellentesque sapien ex nec elit. Ut maximus sodales eros id efficitur. Nunc pulvinar elit tortor, quis congue dui elementum nec. Suspendisse potenti. Cras eleifend feugiat augue eget gravida. Donec bibendum, ante non vehicula maximus, sapien risus laoreet nunc, a aliquet felis arcu eu ante. Phasellus molestie lectus in pharetra fermentum.</p>
+	<p class="para-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam malesuada tortor venenatis urna scelerisque, et tincidunt quam tempor. Duis pretium odio non turpis tempus, sit amet porta odio sagittis. Etiam gravida malesuada mauris, congue ultrices diam ullamcorper non. Donec id ante ut est fermentum placerat. Curabitur et ultricies nunc, sed sagittis neque. Praesent ornare fringilla est, faucibus molestie sem tincidunt id. Integer porta tincidunt elit id facilisis. Nullam pulvinar congue sapien ut rhoncus. Duis ultricies nibh quis sem vehicula, at porttitor dui imperdiet. Cras luctus, dui in volutpat ornare, urna odio rutrum neque, at pellentesque sapien ex nec elit. Ut maximus sodales eros id efficitur. Nunc pulvinar elit tortor, quis congue dui elementum nec. Suspendisse potenti. Cras eleifend feugiat augue eget gravida. Donec bibendum, ante non vehicula maximus, sapien risus laoreet nunc, a aliquet felis arcu eu ante. Phasellus molestie lectus in pharetra fermentum.</p>
+
+	<h2 class="header-2">
+		asdfahd fka sdklf kadjl fjkas djkfl askldjfkl
+	</h2>
 </body>
 </html>
+<!-- https://marksheet.io/sass-mixins.html -->
